[package]
name = "cuneiforbits"
version = "0.1.0"
authors = ["Asa Zeren <asaizeren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
termion = "1.5.5"
lazy_static = "1.4"
static_assertions = "1.1"
cuneiform_width = { git = "https://github.com/asa-z/cuneiform_width" }